# python-example-app

./: .gitignore  README.md
deployment/: k8s-deployment.yaml  k8s-service.yaml
src/: Dockerfile  main.py  pyproject.toml
